--- a/app/views/static/about.html.erb
+++ b/app/views/static/about.html.erb
@@ -1,2 +1,2 @@
-<h1>User Event Notification App</h1>
-<p>This is for assignment.</p>
+<h1>About User Event Notification App</h1>
+<p>Welcome to the about page of User Event Notification App. This is for assignment.</p>
