--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,2 +1,8 @@
-<h1>User Event Notification App</h1>
+
 <p>More content coming soon...</p>
+
+<div class="center jumbotron">
+  <h1>User Event Notification App</h1>
+  <h2>This is the home page for the Notification application.</h2>
+  <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
+</div>
