--- a/app/views/static/_authenticated_events.erb
+++ b/app/views/static/_authenticated_events.erb
@@ -1,4 +1,7 @@
-<h3>You can either choose Blue <strike>pill</strike> button or Red button to trigger an event.</h3>
+<h3>You can either choose Blue button or Red 💊 button to trigger an event.</h3>
+
+<h6>Event B also sends email notification.</h6>
+<hr>
 
 <%= link_to 'Event A', events_path({ event_type: 'EventA'}), data: { turbo_method: :post }, class: 'btn btn-primary', id: 'event_a' %>
 
