--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,8 @@
   <body>
     <%= render 'layouts/header' %>
 
+    <%= render 'layouts/notifications' %>
+
     <div class="container">
       <%= yield %>
     </div>
